# research-app

./: .gitignore  AGENTS.md  CONTEXT.md
.scratch/anna-app-adapter-mvp/: PRD.md
.scratch/anna-app-adapter-mvp/issues/: 01-mock-anna-research-lifecycle-tracer-bullet.md  02-anna-sampling-role-and-query-planning.md  03-tavily-summary-retrieval-with-domain-filter.md  (+4 more)
.scratch/anna-app-shell-engineering-i18n/: PRD.md
.scratch/local-result-transfer-server/: PRD.md
.scratch/research-source-abstraction/: PRD.md
anna-researcher-app/: app.json  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
anna-researcher-app/bundle/: app.js  index.html  style.css
anna-researcher-app/executas/researcher-python/: executa.json  pyproject.toml  researcher_plugin.py
anna-researcher-app/executas/researcher-python/researcher_adapter/: __init__.py  context_selector.py  dispatcher.py  errors.py  job_store.py  orchestrator.py  sampling_llm.py  tavily_retrieval.py
anna-researcher-app/src/: App.tsx  main.tsx  styles.css  types.ts
anna-researcher-app/tests/: conftest.py  run_tests.py
docs/adr/: 0002-temporary-local-result-transfer-server.md  0003-unified-research-source-abstraction.md  0004-constrained-configurable-research-source-envelope.md  0005-iterative-research-loop-frontend-owned.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
researcher-tool/: researcher_plugin.py
researcher-tool/researcher_tool/: context_selector.py  dispatcher.py  job_store.py  result_transfer.py  settings.py  views.py
(+58 files in other folders)
