[project]
name = "tool-test-researcher-12345678"
version = "0.1.0"
description = "Anna Researcher Executa wrapper"
requires-python = ">=3.10"
authors = [{ name = "Anna Research" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
"tool-test-researcher-12345678" = "researcher_plugin:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["researcher_plugin"]
packages = ["researcher_adapter"]

